[tool.poetry]
name = "vocaloidcafe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
discord-py-slash-command = "*"
youtube-dl = "^2021.2.10"
sembed = "^1.0.7"
pynacl = "*"
replit = "^2.0.0"
motor = "*"
dnspython = "*"
jishaku="*"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
